--- a/src/components/Modal/src/index.less
+++ b/src/components/Modal/src/index.less
@@ -17,7 +17,7 @@
 
 .ant-modal {
   width: 520px;
-  padding-bottom: 0;
+  padding-bottom: 0 !important;
 
   .ant-modal-body>.scrollbar {
     padding: 14px;
